2003-01-08  Hideyuki SHIRAI  <shirai@quickhack.net>

	* emacs/mhc-mew.el (mhc-mew-summary-mode-setup): Set `vinfo-flds'
	for Mew 3.1.50 or later.

2002-12-03  Hideyuki SHIRAI  <shirai@quickhack.net>

	* emacs/mhc-mew.el (mhc-mew-redisplay-import): New user variable.
	(mhc-mew-get-import-buffer): If `mhc-mew-redisplay-import' is
	non-nil, re-display message with no hooks and no X-Face.

2002-12-01  Hideyuki SHIRAI  <shirai@quickhack.net>

	* emacs/mhc.el (mhc-scan-month): Use `mhc-misc-get-width'.

	* emacs/mhc-summary.el (mhc-summary/insert-separator): Use `mhc-misc-get-width'.

	* emacs/mhc-misc.el (mhc-misc-get-width): New function.

	* emacs/mhc-calendar.el (mhc-calendar/view-summary-insert): Call
	`mhc-summary/insert-separator' with fix width.

2002-11-21  Yoshinari NOMURA  <nom@quickhack.net>

	* ruby-ext/mhc_pilib.c (rldp_ReadAppBlock):
	add application info

	* ruby-ext/extconf.rb.in (toplevel):
	add LDFLAGS for FreeBSD

	* configure.rb (toplevel):
	add some items to lib_search_path and inc_search_path for NetBSD.

2002-11-11 Yoichi NAKAYAMA <yoichi@eken.phys.nagoya-u.ac.jp> / nom

	* emacs/mhc-cvs.el, emacs/mhc-e21.el, emacs/mhc-file.el,
	  emacs/mhc-ps.el, emacs/mhc-sync.el, emacs/mhc-xmas.el,
	  emacs/mhc.el, emacs/mhc-bm.el, emacs/mhc-calendar.el:

	  Support the following coding convention:
	    Many commands that take a long time to execute display a message
	    that says something like `Operating...' when they start, and
	    change it to `Operating...done' when they finish.  Please keep the
	    style of these messages uniform: _no_ space around the ellipsis,
	    and _no_ period after `done'.

2002-11-09  MIYOSHI Masanori  <miyoshi@boreas.dti.ne.jp>

	* mhc2ol.in: Remove an irrelevant substitution of DayOfMonth in
	YearlyNth.

2002-11-06  Yuuichi Teranishi  <teranisi@gohome.org>

	* emacs/mhc-wl.el (mhc-wl-summary-mode-setup): Follow the recent
	change on modeline format.

2002-10-29  Yoichi NAKAYAMA <yoichi@eken.phys.nagoya-u.ac.jp> / shirai
